2005-02-12  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo_gstate.c
	(_cairo_gstate_clip_and_composite_trapezoids): Make clipping fast
	path fast.  When we have a clipping region set, intersect it
	against the drawing extents to determine the bounding box for the
	visible drawing.

2005-02-10  Carl Worth  <cworth@cworth.org>

	* BUGS: Add bug for cairo_show_surface under non-default CTM.

2005-02-07  Kristian Høgsberg  <krh@redhat.com>

	* test/pixman_rotate.c, test/pixman_rotate-ref.png: New test case
	which exposes off-by-one rotation error in pixman.

2005-02-06  Owen Taylor  <otaylor@redhat.com>

        * src/cairo_gstate.c src/cairo.c: Allow cairo_set_font (cr, NULL)
        to unset the current font and return the cairo_t to the the
        "use the font from cairo_select_font() state".

2005-02-06  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_win32_font.c (_cairo_win32_font_text_to_glyphs): 
	Return the right status. (Reported by Hans Breuer.)

2005-02-06  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_win32_font.c (_cairo_win32_font_text_to_glyphs): Free
	glyph_indices, not glyphs. (Reported by Hans Breuer.)

2005-02-05  Carl Worth  <cworth@cworth.org>

	* configure.in: Add message stating why glitz backend is disabled.

2005-02-05  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_ft_font.c (_cairo_ft_font_text_to_glyphs): 
	Don't free *glyphs when succeeding! (Reported by Øyvind Kolås)

	* configure.in: Temporarily disable glitz by default.

2005-02-04  Carl Worth  <cworth@cworth.org>

	* src/Makefile.am: Generate an error during make install if old
	cairo headers are found in includedir, (rather than
	includedir/cairo where the new ones are going).

2005-02-03  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_ft_font.c (_cairo_ft_font_text_to_glyphs,
	_cairo_ft_font_create_glyph): Fix missing cairo_ft_font_unlock_face().

	* src/cairo_cache.c (_cairo_cache_random_entry): Fix problem
	when no entry could be found.
